# cinterface

./: .gitignore  CMakeLists.txt  README.md
ch1/: CMakeLists.txt  main.c  strcpy.c
ch2/: CMakeLists.txt  Makefile  arith.c  arith.h  main  main.c  mem.h  stack.c  stack.h
ch3/: CMakeLists.txt  TestConfig.h.in  atom.c  atom.h  compile_commands.json  main.c  mem.h
ch3/.cache/clangd/index/: TestConfig.h.91AD8672D414DB2C.idx  atom.c.D7ABBFBC528EB947.idx  atom.h.9A0FD551773ABAD4.idx  main.c.86DEC9291A891856.idx  mem.h.24872D2A459CB4E2.idx
ch3/src/: CMakeLists.txt  atom.c  atom.h  main.c
chapter1/: strcpy.c
