
# add_executable(Test main.c atom.c)
# target_include_directories(Test PUBLIC "${PROJECT_BINARY_DIR}")

ADD_LIBRARY(atom_static STATIC atom.c)

SET_TARGET_PROPERTIES(atom_static PROPERTIES OUTPUT_NAME "atom")
SET_TARGET_PROPERTIES(atom_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(atom SHARED atom.c)
SET_TARGET_PROPERTIES(atom PROPERTIES OUTPUT_NAME "atom")
SET_TARGET_PROPERTIES(atom PROPERTIES CLEAN_DIRECT_OUTPUT 1)

